updated the env file for the correct credentials

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=DerashUserJWT
 DATABASE=derashdb
 HOST=78.46.175.135
-PASSWORD=DerashUserJWT
-USER=UrFCr7meM7rUJxxCrELt
+USER=derash_admin
+PASSWORD=UrFCr7meM7rUJxxCrELt
